@@ -3,6 +3,9 @@ Changelog
 
 4.20-dev - (unreleased)
 -----------------------
+ * Bug fix: WIP patched plone.app.kss not silently fails and to display a
+   progress info on state change
+   [ghicaale #5017]
  * Bug fix: patched plone.app.redirector to also redirect direct file download
    links (e.g. at_download/fileField) when the containing object defines an alias
    [ghicaale]
